# somhunter-core

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  api.json  config.json  doxygen.cfg  install-config.json  install.sh  run  run-tests.sh  run.sh
.github/workflows/: cmake.yml
config/: config-api.json  config-auth.json  config-core __V3C1-20k.json  config-core.json  config-core__ITEC.json  config-core__LSC2021.json  config-core__V3C1-first100.json  config-core__V3C1.json  config-install.json
data/ITEC_w2vv/: with_top.images_top_keywords.txt  with_top.keyword_classes.txt  word2idx.txt
data/nn_models/: models.LICENSE
docs/: canvas-query-ranker_8cpp.html  canvas-query-ranker_8h.html  class_term_color_1_1_modifier.html  class_term_color_1_1_modifier.js  classsh_1_1_async_som.html  classsh_1_1_bitmap_image.html  classsh_1_1_canvas_query-members.html  classsh_1_1_canvas_query.js  classsh_1_1_canvas_subquery_base.js  classsh_1_1_canvas_subquery_text-members.html  classsh_1_1_canvas_subquery_text.js  classsh_1_1_dataset_frames.js  classsh_1_1_extractor-members.html  classsh_1_1_frame_features.js  classsh_1_1_frame_pointer_range-members.html  classsh_1_1_i_server_client.html  classsh_1_1_keyword_clip_ranker.html  classsh_1_1_keyword_ranker.html  classsh_1_1_keyword_ranker.js  classsh_1_1_logger.js  classsh_1_1_network_api.js  classsh_1_1_task_target_helper_1_1_task-members.html  client-dres_8cpp.html  common-types_8h.html  common-types_8h.js  dataset-features_8h.js  dataset-frames_8h.js  dir_17110777e452f876bf533db153f629af.js  dir_248832ff8517b5b7d5da1a6bc8750d99.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_5ddb55b01a17ceaa6ac7c615394edeef.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9fc5102c0ab35437fe430e7d2cd591ab.html  dir_9fc5102c0ab35437fe430e7d2cd591ab.js  dir_c2db1d1bff05a066219977365317a817.html  dir_eabf73f6efa81e94524a9044ca737323.html  dir_fe680d193281dea8f29c9bf94b4af9e2.html  embedding-ranker_8h.html  eval-server-client_8cpp.html  functions_b.html  (+90 more)
docs/api/: index.html
docs/html/: annotated.html  (+1413 more)
misc/: code-style-guidelines.md  run-clang-format-cpp.sh  style_cpp_format.bat  style_cpp_format.sh  watch-actions-summary-log.sh
scripts/: configure.py  install_libtorch.ps1  install_libtorch.py  install_libtorch.sh  utils.py
src/: AsyncSom.cpp  AsyncSom.h  CMakeLists.txt  CanvasQueryRanker.cpp  CanvasQueryRanker.h  CollageRanker.cpp  CollageRanker.h  CollageRanker.h-6a682139  DatasetFeatures.cpp  DatasetFeatures.h  DatasetFrames.cpp  DatasetFrames.h  EmbeddingRanker.cpp  EmbeddingRanker.h  Extractor.cpp  Extractor.h  Filters.cpp  Filters.h  ImageManipulator.cpp  ImageManipulator.h  KeywordRanker.cpp  KeywordRanker.h  NetworkApi.cpp  NetworkApi.h  RelevanceScores.cpp  RelevanceScores.h  RelocationRanker.cpp  RelocationRanker.h  SOM.cpp  SOM.h  SearchContext.cpp  SearchContext.h  SomHunter.cpp  SomHunter.h  Submitter.cpp  Submitter.h  UserContext.cpp  UserContext.h  WebApi.cpp  WebApi.h  (+11 more)
src/API/: CMakeLists.txt  network-API.cpp  network-API.h
src/common/: CMakeLists.txt  common-types.h  common.h  os-utils.hpp  static-logger.hpp  utils.hpp
src/common/json/: CMakeLists.txt  json-helpers.hpp
src/common/math/: CMakeLists.txt  distances.hpp  vector.hpp
src/common/multimedia/: CMakeLists.txt  image-processor.cpp  image-processor.h
src/common/network/: CMakeLists.txt  http.cpp  http.h  http.h-95f50c61
src/config/: CMakeLists.txt  intrinsics.h  somhunter-config.cpp  static-config.h
src/evaluation-server/: CMakeLists.txt  client-DRES.cpp  eval-server-client.cpp  eval-server-client.h
src/extraction/: CMakeLists.txt
src/extractor/: Extractor.h  extractor.cpp  extractor.h
src/network-api/: CMakeLists.txt  network-api.cpp  network-api.h
src/somhunter/: AsyncSom.cpp  AsyncSom.h  CMakeLists.txt  CanvasQueryRanker.cpp  CanvasQueryRanker.h  DatasetFeatures.cpp  DatasetFeatures.h  DatasetFrames.cpp  DatasetFrames.h  EmbeddingRanker.h  ImageManipulator.cpp  ImageManipulator.h  KeywordRanker.cpp  KeywordRanker.h  RelevanceScores.cpp  RelevanceScores.h  RelocationRanker.cpp  RelocationRanker.h  SOM.cpp  SearchContext.cpp  SearchContext.h  SomHunter.cpp  SomHunter.h  Submitter.cpp  Submitter.h  UserContext.h  query-types.cpp  query-types.h  settings.cpp  settings.h  somhunter.cpp  somhunter.h
src/somhunter/api/: network-api.h
src/somhunter/datasets/: CMakeLists.txt  dataset-features.cpp  dataset-features.h  dataset-frames.cpp  dataset-frames.h
src/somhunter/evaluation-server/: CMakeLists.txt  client-dres.cpp  client-dres.h  eval-server-client.cpp  eval-server-client.h
src/somhunter/helpers/: CMakeLists.txt  task-target-helper.cpp  task-target-helper.h
src/somhunter/logs/: CMakeLists.txt  logger.cpp  logger.h
src/somhunter/rankers/: CMakeLists.txt  canvas-query-ranker.cpp  canvas-query-ranker.h  embedding-ranker.cpp  embedding-ranker.h  keyword-clip-ranker.cpp  keyword-clip-ranker.h  keyword-ranker.cpp  keyword-ranker.h  relocation-ranker.cpp  relocation-ranker.h
src/somhunter/searches/: CMakeLists.txt  scores.cpp  scores.h  search-context.cpp  search-context.h  user-context.cpp  user-context.h
src/somhunter/soms/: CMakeLists.txt  async-som.cpp  async-som.h  som.cpp  som.h
src/system-logging/: CMakeLists.txt  system-logger.h
tests/: CMakeLists.txt  CanvasQueryRanker-tests.cpp  ImageManipulator-tests.cpp  config-tests.h  config-tests.h-e703d2bf  main-tests.cpp  run-external-tests.py  test-utils.hpp  tests.cpp  tests.h  tests.hpp
tests/api/: test_network_api.py
tests/data/: README.md
tests/data/collages/0_collage_1_0/: query_info.json
tests/data/collages/1_collage_1_1/: query_info.json
tests/data/collages/2_collage_2_1/: query_info.json
tests/data/collages/3_collage_2_2/: query_info.json
tests/data/collages/4_collage_1_1/: query_info.json
tests/data/collages/test_collage/: query-info25-05-2021_22-06-33.json
tests/other/: bombard_logger.py
tests/src/: CMakeLists.txt  CanvasQueryRankerTests.cpp  ImageManipulatorTests.cpp  canvas-query-ranker-tests.hpp  image-processor-tests.hpp
(+172 files in other folders)
